<resources>
    <string name="app_name">Anahuac</string>
    <string name="hint_email_or_phone_number">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="txt_need_help">Need Help?</string>
    <string name="txt_sign_facebook">Sign Up for facebook</string>
    <string name="txt_title_practices">Prácticas</string>
    <string name="txt_login_facebook">Log In Facebook</string>
    <string name="txt_signin_netflix">Sign In</string>
    <string name="txt_remember">Remember me</string>
    <string name="txt_new">New to Netflix?</string>
    <string name="txt_sign_up">Sign Up Now.</string>
    <string name="txt_login_with_facebook">Login with Facebook</string>
    <string name="txt_anahuac_cancun">Universidad Anáhuac - Campus Cancún</string>
    <string name="ver_mas">Ver más</string>
    <string name="signin_anahuac">Sign In Now</string>
    <string name="hint_phone_email"> Phone number or email</string>

</resources>