<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginNetflixActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="@dimen/height_logo_n"
        android:src="@drawable/ic_logo_netflix"
        app:layout_constraintEnd_toStartOf="@id/gl_center_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_logo"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signin_netflix"
        android:textColor="@color/white"
        android:textSize="@dimen/size_sign"
        android:textStyle="bold"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toTopOf="@id/cv_email"
        app:layout_constraintEnd_toEndOf="@id/gl_center_v"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/cv_password">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_netflix"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@color/secondary_netflix"
                android:hint="@string/hint_email_or_phone_number"
                android:textColorHint="@color/hint" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/gl_center_h">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_netflix"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@color/secondary_netflix"
                android:hint="@string/hint_password"
                android:textColorHint="@color/hint" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:backgroundTint="@color/button_netflix"
        android:text="@string/txt_signin_netflix"
        android:textStyle="bold"
        android:textSize="@dimen/size_title"
        app:layout_constraintTop_toBottomOf="@id/gl_center_h"
        android:padding="@dimen/margin_2"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_remember"
        android:textColor="@color/hint"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_need_help"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        app:layout_constraintStart_toEndOf="@id/gl_center_v2"/>

    <ImageView
        android:id="@+id/fb_logo"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:src="@drawable/ic_facebook_icon"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_facebook"
        android:textColor="@color/hint"
        app:layout_constraintStart_toEndOf="@id/fb_logo"
        app:layout_constraintTop_toTopOf="@id/fb_logo"
        app:layout_constraintBottom_toBottomOf="@id/fb_logo"
        android:layout_marginLeft="@dimen/margin_default"/>

    <TextView
        android:id="@+id/new_netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new"
        android:textColor="@color/hint"
        android:textSize="@dimen/size_title"
        app:layout_constraintTop_toBottomOf="@id/gl_center_h2"
        app:layout_constraintEnd_toStartOf=""
        android:paddingLeft="@dimen/margin_default"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/size_title"
        app:layout_constraintStart_toEndOf="@id/new_netflix"
        app:layout_constraintTop_toTopOf="@id/new_netflix"
        app:layout_constraintBottom_toBottomOf="@id/new_netflix"
        android:layout_marginLeft="6dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>

